[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/traps/fan_on.png" type="Texture" id=1]
[ext_resource path="res://scenes/hit_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/fan.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 8 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 8 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 8 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10, 22 )

[node name="Fan" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 9 )
speed_scale = 3.0
playing = true

[node name="HitBox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -26 )
shape = SubResource( 16 )

[node name="Audio" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[editable path="HitBox"]
